@@ -12,13 +12,25 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <testng.version>7.10.1</testng.version>
-        <aspectj.version>1.8.10</aspectj.version>
+        <aspectj.version>1.9.22.1</aspectj.version>
         <allure.testng.version>2.28.1</allure.testng.version>
         <allure.maven.version>2.14.0</allure.maven.version>
         <allure.report.version>2.20.1</allure.report.version>
         <surefire.version>2.22.2</surefire.version>
         <compiler.plugin.version>3.13.0</compiler.plugin.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-bom</artifactId>
+                <version>${allure.testng.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
@@ -30,6 +42,7 @@
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
             <version>${allure.testng.version}</version>
+            <scope>test</scope>
         </dependency>
         <!-- Selenium -->
         <dependency>
@@ -105,10 +118,12 @@
                     <suiteXmlFiles>
                         <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                    </argLine>
                     <systemPropertyVariables>
                         <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                     </systemPropertyVariables>
-                    <argLine>--enable-preview</argLine>
                     <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
                 <dependencies>
@@ -126,7 +141,6 @@
                 <configuration>
                     <source>11</source>
                     <target>11</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <!-- Allure plugin -->
